# mitch-s-summer-student-code

./: HACKING.md  README.md  barnes_hut.py  create_data.py  main.py  ml.py  nbody.py  nbody_view.py  physics_helper.py  setup.cfg  setup.py  test.py
SAMPLES/: gen_orbit.py  gen_random.py  orbit10.txt  orbit100.txt  orbit1000.txt  orbit10000.txt  orbit3.txt  orbit5000.txt  rand10.txt  rand100.txt  rand1000.txt  rand3.txt
src/gravbody/: nbody_view.py
src/nbody/: barnes_hut.py  main.py  nbody.py  nbody_view.py  testing.py
src/nbody.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
