[metadata]
name = gravbody
version = 0.1.0
author = Uzair Nawaz
author_email = uzairn@icloud.com
description = A gravitational n-body simulation package with features such as a barnes-hut tree, visualization tools, and CLI.
# if README named differently then delete .md or something
long_description = file: README.md
# similarly probably could just delete this and forget (or 
# just swap to proper type descriptor if necessary)
long_description_content_type = text/markdown
url = https://codeberg.org/uzairn/gravbody
#project_urls =
#    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

# this stuff looks wierd but works with having source code in
# src/nbody. Don't change it unless you plan to restructure the package.

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
